LegendBar for Tablet(ex.366px h), fix Scrollbar library

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -49,3 +49,7 @@ body {
 
   --breakpoint-xs: 460px;
 }
+
+.leaflet-control-attribution path {
+  display: none;
+}
